2008-11-03  Michael Natterer  <mitch@gimp.org>

 	Merged from trunk:

	Bug 559015 – Move tool gives bad information about px moved

	* app/tools/gimpeditselectiontool.c (gimp_edit_selection_tool_init):
	set cursor precision to PIXEL_BORDER because that's what the move
	tool snaps to.

	Unrelated: set CENTER_CROSS_SIZE to an odd number so it's drawn
	symmetrically.

2008-10-31  Sven Neumann  <sven@gimp.org>

	Bug 558660 – help behavior for locales without manual translation
	
	* app/widgets/gimphelp.c (gimp_help_user_manual_is_installed):
	as a fallback check for the english user manual.

2008-10-30  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.6.3 (interface age 3).

2008-10-30  Sven Neumann  <sven@gimp.org>

	* Made 2.6.2 release.

2008-10-30  Sven Neumann  <sven@gimp.org>

	Backed out this change for now as it causes problem with some
	window managers:

        Bug 556896 – Dialogs don't get minimized with single image window

	* app/display/gimpdisplayshell.c
	* app/display/gimpdisplay-foreach.[ch]
	* app/widgets/gimpdialogfactory.[ch]: merged changes from trunk.
	Hide the toolbox and docks if the last display is iconified.
	Unhide them if a display is uniconified.

2008-10-29  Sven Neumann  <sven@gimp.org>

 	Merged from trunk:

	Bug 557950 – Scaling in Gimp 2.6 is much slower than in Gimp 2.4

        * app/paint-funcs/scale-region.c: don't do multi-pass scaling
	when we are scaling up.

2008-10-29  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	Bug 558215 – unit and zoom entries in Statusbar not visible

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_size_allocate): Don't try to be clever,
	call gimp_display_shell_scaled() whenever the canvas size changes
	so a newly created display shell gets updated properly.

2008-10-29  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 558451 – Cannot build GIMP using Sun CC on Solaris 2.8

	* app/pdb/gimp-pdb-compat.c