@@ -138,7 +138,7 @@ file_procedure_find (GSList       *procs,
                       g_set_error (error,
                                    G_FILE_ERROR,
                                    g_file_error_from_errno (errno),
-                                   g_strerror (errno));
+                                   "%s", g_strerror (errno));
                     }
                 }
 
@@ -173,7 +173,7 @@ file_procedure_find (GSList       *procs,
             g_set_error (error,
                          G_FILE_ERROR,
                          g_file_error_from_errno (errno),
-                         g_strerror (errno));
+                         "%s", g_strerror (errno));
 
           fclose (ifp);
         }
