@@ -108,7 +108,7 @@ file_save (GimpImage           *image,
           if (! g_file_test (filename, G_FILE_TEST_IS_REGULAR))
             {
               g_set_error (error, G_FILE_ERROR, G_FILE_ERROR_FAILED,
-                           _("Not a regular file"));
+                           "%s", _("Not a regular file"));
               status = GIMP_PDB_EXECUTION_ERROR;
               goto out;
             }
@@ -116,7 +116,7 @@ file_save (GimpImage           *image,
           if (g_access (filename, W_OK) != 0)
             {
               g_set_error (error, G_FILE_ERROR, G_FILE_ERROR_ACCES,
-                           g_strerror (errno));
+                           "%s", g_strerror (errno));
               status = GIMP_PDB_EXECUTION_ERROR;
               goto out;
             }
