@@ -1,3 +1,10 @@
+2008-11-04  Sven Neumann  <sven@gimp.org>
+
+	* app/file/file-procedure.c
+	* app/file/file-save.c
+	* app/pdb/gimpprocedure.c: be careful when passing literal strings
+	to g_set_error().
+
 2008-11-03  Michael Natterer  <mitch@gimp.org>
 
  	Merged from trunk:
